# HydroVision

./: .gitignore  README.md
Backend/backend_hydrovision_nestjs/: package-lock.json  package.json
Frontend/frontend_hydrovision_react/: package-lock.json  package.json
analytics/backend_analytics_python/: pyproject.toml
