[project]
name = "backend-analytics-python"
version = "0.1.0"
description = ""
authors = [
    {name = "RudhyDev",email = "rudhy.pereira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "geoalchemy2 (>=0.17.1,<0.18.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pika (>=1.3.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "backend_analytics_python", from = "src"}]


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
start = "backend_analytics_python.main:start"
format = "black backend_analytics_python tests"
lint = "flake8 backend_analytics_python tests"
typecheck = "mypy backend_analytics_python"
test = "pytest tests/"